@@ -2,6 +2,8 @@
   * libgputils/gpsymbol.c: merged from preprocessor branch
   * gpasm/parse.y: re-introduced fix for
     "produce the listing file in case that included file doesn't exist"
+  * gpasm/preprocess.c, gpasm/preprocess.h, gpasm/gperror.c:
+    fixed bug #143 #define cycles hang gpasm
 
 2012-10-31  Borut Razem  <borutr@users.sourceforge.net>
   * Merge from preprocessor branch:
